--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -66,7 +66,7 @@
                 <tr>
                     <td class="label-classes">EntityHealth</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/ENTITY-HEALTH/entity-health.html">Scripting</a></td>
                 </tr>
             </table>
         </div>
