Minor changes to EnvQuery

--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/feet-collision-check.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/feet-collision-check.html
@@ -37,7 +37,7 @@
         </p>
         <br>
         <p>
-            This is an example of how you can use <b>FeetCollisionCheck</b> in your script:
+            This is an example of how you can use this function in your script:
         </p>
 <pre class="code-block">
 using UnityEngine;
