--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/ground-check.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/ground-check.html
@@ -36,7 +36,7 @@
         </p>
         <br>
         <p>
-            This example demonstrates how you can use <b>GroundCheck</b> it in your code:
+            This example demonstrates how you can use it in your code:
         </p>
 <pre class="code-block">
 using UnityEngine;
