--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/wall-in-front.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/wall-in-front.html
@@ -36,7 +36,7 @@
         </p>
         <br>
         <p>
-            Here is an example of how you can use <b>WallInFront</b> in your script:
+            Here is an example of how you can use this function in your script:
         </p>
 <pre class="code-block">
 using UnityEngine;
