--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/collider-around-character.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/collider-around-character.html
@@ -51,7 +51,7 @@
         </p>
         <br>
         <p>
-            This is an example of how you could use <b>ColliderAroundCharacter</b> in your script:
+            This is an example of how you could use this function in your script:
         </p>
 <pre class="code-block">
 using UnityEngine;
