--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
@@ -38,10 +38,8 @@
             All of the method examples assume that the <b>CharacterEnvironmentalQuery</b> class, as well as each of the
             <b>Example</b> classes are attached to the same gameObject.
             <br> <br>
-            Each method below includes <b>default cast distances</b> for the physics collision queries.
+            Each method below includes <b>default cast distances</b> for the physics collision queries based on the character's collider.
             Additionally, the ledge grab, head, chest and feet collision queries require the provision of a transform.
-            <br>
-            Refer to the <a class="redirect-link" href="#">manual</a> for more information on the <b>CharacterEnvironmentalQuery</b> component.
         </p>
         <br>
         <div class="table-division">
