--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -29,8 +29,44 @@
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
-                    <td class="label"><a class="properties" href="#">Property</a></td>
+                    <td class="label"><a class="properties" href="#">IsAlive</a></td>
+                    <td class="description">Indicates whether the entity is alive.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">ArmourData</a></td>
                     <td class="description">Description</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">MaxHealthPoints</a></td>
+                    <td class="description">Maximum health points of the entity.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">CurrentHealthPoints</a></td>
+                    <td class="description">The current health points of the entity.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">CanRegenHealth</a></td>
+                    <td class="description">Indicates whether your entity is able to regen missing health points.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">InterruptHealthRegenWhenDamaged</a></td>
+                    <td class="description">Indicates whether your entity should stop regenerating health, when they take damage.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">RegentHealthPoints</a></td>
+                    <td class="description">The amount of health points the entity should regenrate, once the health regeneration effect has been triggered.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">RegenTriggerTime</a></td>
+                    <td class="description">Time in seconds before health regeneration triggers.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">RegenTriggerTimer</a></td>
+                    <td class="description">Triggers health regeneration when this value reaches 0.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="properties" href="#">IsRegeneratingHealth</a></td>
+                    <td class="description">Indicates whether the entity is regenerating health points.</td>
                 </tr>
             </table>
         </div>
@@ -39,8 +75,16 @@
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">Method</a></td>
-                    <td class="description">Description</td>
+                    <td class="label"><a class="public-methods" href="#">Alive</a></td>
+                    <td class="description">Respawns the entity.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="#">KillEntity</a></td>
+                    <td class="description">Kills the entity.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="#">StartHealthRegeneration</a></td>
+                    <td class="description">Starts health regeneration.</td>
                 </tr>
             </table>
         </div>
