--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/head-collision-check.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/head-collision-check.html
@@ -172,7 +172,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
-        if (envQuery.<b>HeadCollisionCheck</b>(distance))
+        if (envQuery.<b>HeadCollisionCheck</b>(out <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RaycastHit2D.html">RaycastHit2D</a> hitInfo, distance))
         {
             <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("Collider: " + hitInfo.transform.name + " found in front of your character's head at the maximum of " + distance + " Unity units away.");
         }
