EntityHealth properties files

--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-PROPERTIES/armour-data.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/PUBLIC-PROPERTIES/armour-data.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MaxHealthPoints</title>
+    <title>ArmourData</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +19,13 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../entity-health.html">EntityHealth</a>.MaxHealthPoints</h1>
+        <h1><a class="redirect-link" href="../entity-health.html">EntityHealth</a>.ArmourData</h1>
         <h2>Declaration</h2>
-        <p>public float <b>MaxHealthPoints</b> { get; set; }</p>
+        <p>public <a class="redirect-link" href="../../ARMOUR-SO/armour-so.html">ArmourSO</a> <b>ArmourData</b> { get; set; }</p>
         <br>
         <h2>Description</h2>
         <p>
-            Maximum health points of the entity.
+            Description.
         </p>
         <br>
         <p>
