--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
@@ -27,10 +27,10 @@
         <br>
         <h2>Description</h2>
         <p>
-            Description of the combat system projectile class goes here.
+            This class is designed for game objects meant to act as projectiles. It controls how these projectiles move and deal damage to other objects. To be damaged by
+            these projectiles, an object must implement the <b>IDamageable</b> interface.
             <br><br>
-            <b style="text-decoration: underline;">**IMPORTANT TO ADD**</b> <br>
-            For an object to take damage from a projectile, it needs to implement the IDamageable interface.
+            It is worth noting that this class pairs well with the <a class="redirect-link" href="../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a> class.
         </p>
         <br>
         <div class="table-division">
@@ -66,7 +66,7 @@
                     <td class="label"><a class="public-methods" href="PUBLIC-METHODS/explode-on-contact.html">ExplodeOnContact</a></td>
                     <td class="description">Deals damage to all colliders inside the specified hitbox.</td>
                 </tr>
-                </table>
+            </table>
         </div>
     </div>
 </body>
