--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/armour-data.html">ArmourData</a></td>
-                    <td class="description">Description</td>
+                    <td class="description">The armour data (if any) of the entity.</td>
                 </tr>
                 <tr>
                     <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/max-health-points.html">MaxHealthPoints</a></td>
